fix too small click targets (keywords list & footer)

--- a/src/uniprotkb/components/protein-data-views/styles/keyword-view.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/keyword-view.module.scss
@@ -2,6 +2,11 @@
   &--inline {
     display: flex;
     flex-wrap: wrap;
-    gap: 1ch;
+    margin-block: 1ch;
+    gap: 1.5ch;
+
+    & > * {
+      padding-block: 0.5ch;
+    }
   }
 }
